# oarc-decorators

./: README.md  pyproject.toml
  decorators/:     test_handle_error.py
docs/: API.md  Specification.md
src/oarc_decorators/: __init__.py  factory.py  handle_error.py  singleton.py
src/oarc_utils/decorators/: __init__.py  asyncio_run.py  handle_error.py  singleton.py
src/oarc_utils/errors/: __init__.py  oarc_crawlers_errors.py
tests/: test_asyncio_run.py  test_factory.py  test_handle_error.py  test_singleton.py
tests/decorators/: __init__.py  test_asyncio_run.py  test_factory.py  test_handle_error.py  test_singleton.py
