[project]
name = "oarc-decorators"
version = "0.1.0"
description = "A global repository of useful python decorators for Ollama Agent Roll Cage (OARC)"
readme = "README.md"
requires-python = ">=3.10, <3.12"
authors = [
    {name = "OARC Team"}
]
dependencies = [
    "click>=8.1.8",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "flake8",
    "pydocstyle",
]